# ros2-assignment2

./: .gitignore  README.md
src/my_minimal_pubsub/: package.xml  setup.cfg  setup.py
src/my_minimal_pubsub/launch/: pubsub.launch.py
src/my_minimal_pubsub/my_minimal_pubsub/: listener.py  talker.py
src/my_minimal_urdf/: CMakeLists.txt  package.xml
src/my_minimal_urdf/launch/: view_robot.launch.py
src/my_minimal_urdf/urdf/: two_link.urdf
